<resources>
    <string name="app_name">Chess</string>
    <string name="start">LOG IN</string>
    <string name="green_chessboard">Green Chessboard</string>
    <string name="game_title">Chess:\nThe Game for Smart People</string>
    <string name="done">Done</string>
    <string name="resign">Resign</string>
    <string name="turn_suffix">\'s Turn</string>
    <string name="promote">Select a piece to promote to:</string>
    <string name="queen">Queen</string>
    <string name="rook">Rook</string>
    <string name="knight">Knight</string>
    <string name="bishop">Bishop</string>
    <string name="winnerLogo">Chess Winner Logo</string>
    <string name="playAgainb">Play Again</string>
    <string name="winnerText">Winner</string>
    <string name="loserText">Loser</string>
    <string name="winText">is the Winner! We declare them a true Master of Chess</string>
    <string name="loseText">is the loser.</string>
    <string name="placeholder">placeholder</string>
    <string name="p1name">enter username</string>
    <string name="p2name">enter password</string>
    <string name="enteruser">enter username</string>
    <string name="enterpass">enter password</string>
    <string name="enterpassa">enter password again</string>
    <string name="cancel">Cancel</string>
    <string name="startmatch">LOG IN</string>
    <string name="newuser">Create New Player</string>
    <string name="rememberuser">Remember Me</string>
    <string name="howToPlay">How To Play</string>
    <string name="instructions">
        After pressing the start match button each player will take turns moving their pieces until
        a players king is captured. Move pieces by clicking and dragging them around the board.
        Capture by placing your piece on your opponent\'s.
    </string>
    <string name="create_game">Create A Game</string>
    <string name="validation_fail">Incorrect Username or Password</string>
    <string name="password_val">Passwords Must Match</string>
    <string name="newuser_fail">Failed to Create New User</string>
    <string name="shoosegame">Choose or Create a Game to Join</string>
    <string name="availgames">Available Games</string>
    <string name="dummy">Dummy String</string>
    <string name="catalog_fail">Failed to Load Games</string>
    <string name="new_game">Create A New Game</string>
    <string name="newgame_fail">Failed to Create A New Game</string>
    <string name="wait">Waiting for player to join...</string>
    <string name="joinfail">Failed to join the game!</string>
</resources>