<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="299dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/start" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="449dp"
        android:layout_above="@+id/buttonStart"
        android:layout_marginBottom="57dp"
        android:contentDescription="@string/green_chessboard"
        app:srcCompat="@drawable/green_chessboard" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="258dp"
        android:layout_height="79dp"
        android:layout_above="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/almendra"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/game_title"
        android:textSize="25sp"
        android:textStyle="bold" />
</RelativeLayout>