<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WinnerActivity">

    <ImageView
        android:id="@+id/chessWinnerLogo"
        android:layout_width="346dp"
        android:layout_height="368dp"
        android:contentDescription="@string/winnerLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044"
        app:srcCompat="@drawable/chess_winner_logo" />

    <Button
        android:id="@+id/playAgainbutton"
        android:layout_width="324dp"
        android:layout_height="51dp"
        android:text="@string/playAgainb"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chessWinnerLogo"
        app:layout_constraintVertical_bias="0.858"
        android:onClick="onPlayAgain"
        />

    <TextView
        android:id="@+id/winnerText"
        android:layout_width="324dp"
        android:layout_height="51dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="@string/winnerText"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/playAgainbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chessWinnerLogo"
        app:layout_constraintVertical_bias="0.311" />

    <TextView
        android:id="@+id/loserText"
        android:layout_width="324dp"
        android:layout_height="51dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/loserText"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/playAgainbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winnerText"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>